--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -14,5 +14,17 @@ jobs:
 
     steps:
       # Push to remote repo
-      - name: bump version
-        run: 'echo "LISTEN!"'
+      - name: checkout branch
+      - uses: actions/checkout@v2
+      - name: Run a one-line script
+        run: ./.github/workflows/bumpversion.sh
+      - name: check for changes
+        run: git status
+      - name: stage changed files
+        run: git add .
+      - name: commit changed files
+        run: git commit -m "Auto updating ProjectVersion"
+      - name: fetch from master
+        run: git fetch origin master
+      - name: push code to master
+        run: git push origin HEAD:master
