--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -17,6 +17,8 @@ jobs:
       - uses: actions/checkout@v1
       - name: Run a one-line script
         run: bash ./.github/workflows/bumpversion.sh
+      - name: switching from HTTPS to SSH
+        run: git remote set-url origin ${{ secrets.SSH }}
       - name: check for changes
         run: git status
       - name: stage changed files
