--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -30,4 +30,4 @@ jobs:
       - name: fetch from master
         run: git fetch origin master
       - name: push code to master
-        run: git push origin HEAD:master
+        run: git push origin master
