--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -19,6 +19,10 @@ jobs:
         run: bash ./.github/workflows/bumpversion.sh
       - name: switching from HTTPS to SSH
         run: git remote set-url origin ${{ secrets.SSH }}
+      - name: set git email
+        run: git config user.email ${{secrets.EMAIL}}
+      - name: set git username
+        run: git config user.name ${{secrets.USERNAME}}
       - name: check for changes
         run: git status
       - name: stage changed files
